# ChangeLog for x11-wm/selectwm
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/selectwm/ChangeLog,v 1.17 2005/05/08 15:00:43 herbs Exp $

  08 May 2005; Herbie Hopkins <herbs@gentoo.org> selectwm-0.4.1.ebuild:
  Stable on amd64.

  12 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> selectwm-0.4.1.ebuild:
  added ~amd64 to KEYWORDS. fixes #81447

  07 Nov 2004; Jason Wever <weeve@gentoo.org> selectwm-0.4.1.ebuild:
  Stable on sparc.

  06 Nov 2004; <pyrania@gentoo.org> selectwm-0.4.1.ebuild:
  Marked stable on x86.

  30 Aug 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  selectwm-0.4.1.ebuild:
  Masked selectwm-0.4.1.ebuild stable for ppc

*selectwm-0.4.1 (17 Jul 2004)

  17 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> +selectwm-0.4.1.ebuild:
  Version bumped, closing bug #56837

  30 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> selectwm-0.3-r1.ebuild,
  selectwm-0.4.ebuild:
  don't assign default to S

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*selectwm-0.3-r1 (01 Sep 2002)
*selectwm-0.4 (01 Sep 2002)

  17 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> selectvm-0.3-r1.ebuild, selectwm-0.4.ebuild :
  Added IUSE.

  01 Sep 2002; Seemant Kulleen <seemant@gentoo.org> selectwm-0.3-r1.ebuild 
  selectwm-0.4.ebuild :

  USE dependednt NLS checking and ebuild cleanup.  Also, added new version
  for GTK2 and SLOTified.  Thanks to: christian-neumair@web.de (Christian -
  Manny Calavera - Neumair) in bug #5638.

*selectwm-0.3 (08 Jul 2002)

  08 Jul 2002; Daniel Ahlberg (aliz@gentoo.org> ChangeLog: 
  Add missing ChangeLog.