@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/selectwm/selectwm-0.4.1.ebuild,v 1.6 2005/05/08 15:00:43 herbs Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/selectwm/selectwm-0.4.1.ebuild,v 1.7 2006/12/08 20:28:12 masterdriverz Exp $
 
 DESCRIPTION="window manager selector tool"
 HOMEPAGE="http://ordiluc.net/selectwm"
@@ -11,8 +11,10 @@ SLOT="2"
 KEYWORDS="x86 sparc ppc amd64"
 IUSE="nls"
 
-DEPEND=">=x11-libs/gtk+-2.0.0
+RDEPEND=">=x11-libs/gtk+-2.0.0
 	>=dev-libs/glib-2.0.0"
+DEPEND="$RDEPEND
+	dev-util/pkgconfig"
 
 src_compile() {
 	local myconf
