@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/selectwm
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/selectwm/ChangeLog,v 1.17 2005/05/08 15:00:43 herbs Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/selectwm/ChangeLog,v 1.18 2006/12/08 20:28:12 masterdriverz Exp $
+
+  08 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
+  -selectwm-0.4.ebuild, selectwm-0.4.1.ebuild:
+  Add pkgconfig dep, thanks to Patrick Lauer for reporting; bug 150276
 
   08 May 2005; Herbie Hopkins <herbs@gentoo.org> selectwm-0.4.1.ebuild:
   Stable on amd64.
